[package]
name = "api_calls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio ={ version = "1.34.0", features = ["full"]}
serde ={ version = "1.0", features = ["derive"]}
reqwest ={ version = "0.11.20", features = ["json"]}
serde_json = "1.0"